--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,13 @@ services:
       - '27017:27017'
   server:
     build: backend
-    image: kaankoc/meanstack_backend
+    image: docker.io/kaankoc97/cap-backend
     ports:
       - '8080:8080'
     links:
       - mongo-db
   client:
     build: frontend
-    image: kaankoc/meanstack_frontend
+    image: docker.io/kaankoc97/cap-frontend
+    ports:
+      - '4200:4200'
